# llm-council-backend

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  llm_council.yaml  mkdocs.yml  pyproject.toml
.github/skills/council-gate/references/: ci-cd-rubric.md
.github/skills/council-review/references/: code-review-rubric.md
.github/workflows/: docs.yml  release-security.yml
deploy/railway/: TEMPLATE_OVERVIEW.md
docs/: api.md  index.md
docs/adr/: ADR-001-Council-Summary.md  ADR-007-scoring-methodology.md  ADR-010-consensus-mechanisms.md  ADR-012-mcp-server-reliability.md  ADR-014-verbosity-penalty-prompts.md  ADR-015-bias-auditing.md  ADR-016-structured-rubric-scoring.md  ADR-017-response-order-randomization.md  ADR-018-cross-session-bias-aggregation.md  ADR-019-outlook-email-itil-analysis.md  ADR-020-not-diamond-integration-strategy.md  ADR-021-quint-code-fpf-integration.md  ADR-022-tiered-model-selection.md  ADR-023-multi-router-gateway-support.md  ADR-024-unified-routing-architecture.md  ADR-026-dynamic-model-intelligence.md  ADR-027-frontier-tier.md  ADR-028-dynamic-candidate-discovery.md  ADR-029-model-audition-mechanism.md  ADR-030-scoring-refinements.md  ADR-031-configuration-modernization.md  ADR-032-complete-config-migration.md  ADR-034-agent-skills-verification.md  ADR-035-devsecops-implementation.md  ADR-036-output-quality-quantification.md  ADR-037-n8n-workflow-integration.md  ADR-038-one-click-deployment-strategy.md  ADR-039-llmrouter-integration.md
docs/announcements/: v0.22.0-community-posts.md  v0.24.0-community-posts.md
docs/blog/: 01-multi-model-architecture.md  02-fault-tolerant-gateway.md  04-latency-tax-parallel.md  05-detecting-evaluator-bias.md  08-n8n-workflow-automation.md  10-agent-skills-introduction.md  11-verification-security-architecture.md  12-cicd-quality-gates.md  13-council-deliberation-verification.md  15-quality-quantification.md
docs/getting-started/: configuration.md
docs/stylesheets/: extra.css
llm_council_mcp/: config.py
src/llm_council/: __init__.py  cache.py  config.py  cost_ceiling.py  council.py  evaluation.py  frontier_fallback.py  gateway_adapter.py  graduation.py  http_server.py  layer_contracts.py  mcp_server.py  openrouter.py  safety_gate.py  telemetry.py  telemetry_client.py  tier_contract.py  unified_config.py  voting.py
src/llm_council/audition/: __init__.py  selection.py  store.py  tracker.py  types.py  voting.py
src/llm_council/gateway/: __init__.py  circuit_breaker.py  circuit_breaker_registry.py  direct.py  openrouter.py  requesty.py  router.py  types.py
src/llm_council/metadata/: __init__.py  discovery.py  dynamic_provider.py  intersection.py  protocol.py  registry.py  scoring.py  selection.py  startup.py  types.py  worker.py
src/llm_council/models/: registry.yaml
src/llm_council/performance/: __init__.py  store.py  tracker.py  types.py
src/llm_council/quality/: __init__.py  attribution.py  consensus.py  deliberation.py  integration.py  types.py
src/llm_council/reasoning/: __init__.py  tracker.py  types.py
src/llm_council/skills/: __init__.py  loader.py
src/llm_council/triage/: __init__.py  complexity.py  fast_path.py  prompt_optimizer.py  rollback_metrics.py  types.py  wildcard.py
src/llm_council/verification/: __init__.py  api.py  types.py  verdict_extractor.py
src/llm_council/webhooks/: _council_runner.py  dispatcher.py
src/llm_council_mcp/: council.py  openrouter.py
tests/: conftest.py  test_audition_observability.py  test_audition_selection.py  test_audition_tracker.py  test_audition_transitions.py  test_audition_types.py  test_audition_voting.py  test_bias_persistence.py  test_circuit_breaker_enhanced.py  test_circuit_breaker_registry.py  test_circuit_breaker_selection.py  test_cost_ceiling.py  test_cost_scoring.py  test_council.py  test_council_integration.py  test_council_reliability.py  test_discovery.py  test_dynamic_provider.py  test_fallback_integration.py  test_frontier_fallback.py  test_frontier_observability.py  test_gateway_adapter_error_handling.py  test_gateway_direct.py  test_gateway_requesty.py  test_gateway_router.py  test_graduation.py  test_http_server.py  test_layer_contracts.py  test_layer_integration.py  test_mcp_server.py  test_mcp_tier_integration.py  test_metadata_integration.py  test_metadata_protocol.py  test_metadata_types.py  test_observability.py  test_offline_mode.py  test_performance_tracker.py  test_performance_types.py  test_quality_percentile.py  test_quality_tier_scores.py  (+23 more)
tests/integration/skills/: test_council_gate.py  test_council_review.py
tests/quality/: __init__.py  test_attribution.py  test_consensus.py  test_deliberation.py  test_integration.py
tests/unit/skills/: test_skill_loader_robustness.py
tests/unit/verification/: test_types.py
